--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ githubSlug=grails-guides/grails-quickcasts-logging
 githubBranch=master
 category=Grails Apprentice
 tags=quickcast,logging
+publicationDate=18 Jul 2017
